--- a/Backend/mistral/TutorDigitalMistra/front/index.html
+++ b/Backend/mistral/TutorDigitalMistra/front/index.html
@@ -79,9 +79,17 @@
                         <input class="form-check-input" type="checkbox" id="streamToggle" checked>
                         <label class="form-check-label small text-muted" for="streamToggle">Stream</label>
                     </div>
-                    <div class="form-check form-switch" style="transform: scale(0.9); transform-origin: right;">
-                        <input class="form-check-input" type="checkbox" id="ttsToggle" checked>
-                        <label class="form-check-label small text-muted" for="ttsToggle">🔊 Voz</label>
+                    <div class="d-flex align-items-center gap-2" style="transform: scale(0.9);">
+                        <div class="form-check form-switch mb-0">
+                            <input class="form-check-input" type="checkbox" id="ttsToggle" checked>
+                            <label class="form-check-label small text-muted" for="ttsToggle">🔊 Voz</label>
+                        </div>
+                        <div class="d-flex align-items-center gap-1" id="ttsSpeedControl">
+                            <label class="small text-muted mb-0" for="ttsSpeed" style="white-space: nowrap;">⚡</label>
+                            <input type="range" class="form-range" id="ttsSpeed" min="0.5" max="5.0" step="0.25"
+                                value="4.0" style="width: 60px; height: 16px;">
+                            <span class="small text-muted mb-0" id="ttsSpeedLabel" style="min-width: 28px;">4.0x</span>
+                        </div>
                     </div>
                 </div>
             </div>
