--- a/Backend/mistral/TutorDigitalMistra/front/index.html
+++ b/Backend/mistral/TutorDigitalMistra/front/index.html
@@ -76,6 +76,71 @@
                 </form>
             </div>
         </div>
+        <!-- Instructor Upload Button (solo visible para instructores) -->
+        <button id="instructor-upload-btn" class="float-btn" style="display: none;" title="Subir Temario">
+            <i class="bi bi-file-earmark-arrow-up-fill fs-4"></i>
+        </button>
+    </div>
+
+    <!-- Upload Modal (Instructor) -->
+    <div id="upload-modal-overlay" class="upload-modal-overlay" style="display: none;">
+        <div class="upload-modal-card">
+            <div class="upload-modal-header">
+                <div class="d-flex align-items-center gap-2">
+                    <i class="bi bi-file-earmark-pdf-fill" style="font-size: 1.3rem; color: var(--sky-600);"></i>
+                    <h6 class="mb-0 fw-bold" style="color: var(--text-main);">Subir Temario</h6>
+                </div>
+                <button class="btn btn-sm text-secondary" id="close-upload-modal"><i class="bi bi-x-lg"></i></button>
+            </div>
+
+            <form id="uploadForm" class="upload-modal-body">
+                <!-- Account ID -->
+                <div class="upload-field">
+                    <label for="accountIdInput" class="upload-label">
+                        <i class="bi bi-person-badge me-1"></i> Account ID
+                    </label>
+                    <input type="text" class="upload-input" id="accountIdInput" placeholder="UUID de la empresa"
+                        required>
+                </div>
+
+                <!-- Drop Zone -->
+                <div class="upload-dropzone" id="uploadDropzone">
+                    <input type="file" id="pdfFileInput" accept=".pdf" required hidden>
+                    <div class="dropzone-content" id="dropzoneContent">
+                        <i class="bi bi-cloud-arrow-up" style="font-size: 2.2rem; color: var(--sky-400);"></i>
+                        <p class="mb-1 fw-semibold" style="color: var(--text-main);">Arrastra tu PDF aquí</p>
+                        <p class="mb-0 small" style="color: var(--text-light);">o haz clic para seleccionar</p>
+                    </div>
+                    <div class="dropzone-file" id="dropzoneFile" style="display: none;">
+                        <i class="bi bi-file-earmark-pdf-fill" style="font-size: 1.8rem; color: #e74c3c;"></i>
+                        <div>
+                            <p class="mb-0 fw-semibold" id="selectedFileName"
+                                style="color: var(--text-main); font-size: 0.9rem;">archivo.pdf</p>
+                            <p class="mb-0 small" id="selectedFileSize" style="color: var(--text-light);">0 KB</p>
+                        </div>
+                        <button type="button" class="btn btn-sm text-danger" id="clearFileBtn" title="Quitar archivo">
+                            <i class="bi bi-trash3"></i>
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Submit Button -->
+                <button type="submit" class="upload-submit-btn" id="uploadBtn">
+                    <i class="bi bi-cloud-upload me-2"></i>Subir y Procesar
+                </button>
+
+                <!-- Progress bar (hidden by default) -->
+                <div class="upload-progress" id="uploadProgress" style="display: none;">
+                    <div class="upload-progress-bar" id="uploadProgressBar"></div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Toast Notification -->
+    <div id="toast-container" class="toast-notification" style="display: none;">
+        <div class="toast-icon" id="toastIcon"><i class="bi bi-check-circle-fill"></i></div>
+        <span id="toastMessage">Notificación</span>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
