--- a/Backend/mistral/TutorDigitalMistra/front/instructor.html
+++ b/Backend/mistral/TutorDigitalMistra/front/instructor.html
@@ -819,10 +819,160 @@
                 max-height: 300px;
             }
         }
+
+        /* ---- User Profile Button ---- */
+        .user-profile-wrapper {
+            position: fixed;
+            top: 18px;
+            left: 18px;
+            z-index: 9999;
+        }
+
+        .user-avatar-btn {
+            width: 46px;
+            height: 46px;
+            border-radius: 50%;
+            border: 2.5px solid rgba(255, 255, 255, 0.75);
+            background: linear-gradient(135deg, var(--sky-400), var(--sky-600));
+            color: #fff;
+            font-size: 1.2rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            box-shadow: 0 4px 16px rgba(60, 120, 190, 0.3);
+            transition: all 0.25s ease;
+            font-family: 'Inter', sans-serif;
+        }
+
+        .user-avatar-btn:hover {
+            transform: scale(1.08);
+            box-shadow: 0 6px 24px rgba(60, 120, 190, 0.4);
+        }
+
+        .user-avatar-btn:active {
+            transform: scale(0.96);
+        }
+
+        .user-profile-dropdown {
+            position: absolute;
+            top: calc(100% + 8px);
+            left: 0;
+            background: rgba(255, 255, 255, 0.92);
+            backdrop-filter: blur(18px);
+            border: 1.5px solid rgba(200, 220, 240, 0.5);
+            border-radius: 16px;
+            padding: 10px;
+            min-width: 200px;
+            box-shadow: 0 10px 35px rgba(60, 120, 190, 0.22);
+            display: none;
+            animation: userDropIn 0.2s ease;
+        }
+
+        @keyframes userDropIn {
+            from {
+                opacity: 0;
+                transform: translateY(-6px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .user-profile-dropdown.open {
+            display: block;
+        }
+
+        .user-profile-info {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 10px 12px;
+            border-bottom: 1px solid rgba(200, 220, 240, 0.35);
+            margin-bottom: 6px;
+        }
+
+        .user-profile-info .profile-avatar-sm {
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            background: linear-gradient(135deg, var(--sky-300), var(--sky-500));
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+            font-size: 0.9rem;
+            flex-shrink: 0;
+        }
+
+        .user-profile-info .profile-details {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .user-profile-info .profile-name {
+            font-size: 0.88rem;
+            font-weight: 600;
+            color: var(--text-main);
+        }
+
+        .user-profile-info .profile-role {
+            font-size: 0.72rem;
+            font-weight: 500;
+            color: var(--text-light);
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        .user-profile-action {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 10px 12px;
+            border: none;
+            background: none;
+            width: 100%;
+            font-size: 0.88rem;
+            font-weight: 500;
+            color: #e74c3c;
+            border-radius: 10px;
+            cursor: pointer;
+            font-family: 'Inter', sans-serif;
+            transition: background 0.15s;
+        }
+
+        .user-profile-action:hover {
+            background: rgba(231, 76, 60, 0.08);
+        }
+
+        .user-profile-action i {
+            font-size: 1rem;
+        }
     </style>
 </head>
 
 <body>
+    <!-- User Profile Button -->
+    <div class="user-profile-wrapper" id="userProfileWrapper">
+        <button class="user-avatar-btn" id="userAvatarBtn" onclick="toggleUserMenu()">
+            <i class="bi bi-person-fill"></i>
+        </button>
+        <div class="user-profile-dropdown" id="userProfileDropdown">
+            <div class="user-profile-info">
+                <div class="profile-avatar-sm"><i class="bi bi-person-fill"></i></div>
+                <div class="profile-details">
+                    <span class="profile-name" id="profileName">Instructor</span>
+                    <span class="profile-role" id="profileRole">Instructor</span>
+                </div>
+            </div>
+            <button class="user-profile-action" onclick="logoutUser()">
+                <i class="bi bi-box-arrow-left"></i> Cerrar sesión
+            </button>
+        </div>
+    </div>
+
     <div class="bg-container">
         <div class="ambient-shape shape-1"></div>
         <div class="ambient-shape shape-2"></div>
@@ -931,11 +1081,6 @@
             <!-- Test Tutor Button -->
             <button class="btn-test-tutor" id="testTutorBtn">
                 <i class="bi bi-play-circle"></i> Testear Tutor Virtual
-            </button>
-
-            <!-- Logout -->
-            <button class="btn-logout" id="logoutBtn">
-                <i class="bi bi-box-arrow-left me-1"></i> Cerrar sesión
             </button>
         </div>
     </div>
@@ -1079,10 +1224,19 @@
         });
 
         // ---- Logout ----
-        document.getElementById('logoutBtn').addEventListener('click', () => {
+        function toggleUserMenu() {
+            document.getElementById('userProfileDropdown').classList.toggle('open');
+        }
+        document.addEventListener('click', (e) => {
+            const wrapper = document.getElementById('userProfileWrapper');
+            if (wrapper && !wrapper.contains(e.target)) {
+                document.getElementById('userProfileDropdown').classList.remove('open');
+            }
+        });
+        function logoutUser() {
             sessionStorage.removeItem('userRole');
             window.location.href = 'login.html';
-        });
+        }
 
         // ---- Toast ----
         let toastTimeout;
