--- a/Backend/mistral/TutorDigitalMistra/front/tutor.html
+++ b/Backend/mistral/TutorDigitalMistra/front/tutor.html
@@ -25,6 +25,25 @@
 </head>
 
 <body>
+    <!-- User Profile Button -->
+    <div class="user-profile-wrapper" id="userProfileWrapper">
+        <button class="user-avatar-btn" id="userAvatarBtn" onclick="toggleUserMenu()">
+            <i class="bi bi-person-fill"></i>
+        </button>
+        <div class="user-profile-dropdown" id="userProfileDropdown">
+            <div class="user-profile-info">
+                <div class="profile-avatar-sm"><i class="bi bi-person-fill"></i></div>
+                <div class="profile-details">
+                    <span class="profile-name" id="profileName">Usuario</span>
+                    <span class="profile-role" id="profileRole">Alumno</span>
+                </div>
+            </div>
+            <button class="user-profile-action" onclick="logoutUser()">
+                <i class="bi bi-box-arrow-left"></i> Cerrar sesión
+            </button>
+        </div>
+    </div>
+
     <div id="loading-overlay">
         <div class="spinner-custom"></div>
         <div class="loading-text">Cargando...</div>
@@ -87,6 +106,26 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
+    <script>
+        // ---- User Profile Menu ----
+        function toggleUserMenu() {
+            document.getElementById('userProfileDropdown').classList.toggle('open');
+        }
+        document.addEventListener('click', (e) => {
+            const wrapper = document.getElementById('userProfileWrapper');
+            if (wrapper && !wrapper.contains(e.target)) {
+                document.getElementById('userProfileDropdown').classList.remove('open');
+            }
+        });
+        function logoutUser() {
+            sessionStorage.removeItem('userRole');
+            window.location.href = 'login.html';
+        }
+        // Mostrar rol
+        const role = sessionStorage.getItem('userRole') || 'Alumno';
+        document.getElementById('profileRole').textContent = role;
+    </script>
 
     <script src="script.js"></script>
 </body>
