--- a/Backend/mistral/TutorDigitalMistra/front/tutor.html
+++ b/Backend/mistral/TutorDigitalMistra/front/tutor.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>CrazyTeacher | Aula Virtual</title>
+    <title>HoloMentor | Aula Virtual</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,9 @@
 
     <script>
         // ---- Guard: solo Alumnos logueados pueden acceder ----
-        if (sessionStorage.getItem('userRole') !== 'Alumno') {
+        // ---- Guard: solo Alumnos logueados pueden acceder ----
+        const token = localStorage.getItem('authToken');
+        if (!token) {
             window.location.href = 'login.html';
         }
     </script>
