--- a/Backend/mistral/TutorDigitalMistra/front/tutor.html
+++ b/Backend/mistral/TutorDigitalMistra/front/tutor.html
@@ -21,6 +21,7 @@
         // ---- Guard: solo Alumnos logueados pueden acceder ----
         const token = localStorage.getItem('authToken');
         if (!token) {
+            alert("No se encontró token de sesión. Redirigiendo al login.");
             window.location.href = 'login.html';
         }
     </script>
