--- a/Backend/mistral/TutorDigitalMistra/front/instructor.html
+++ b/Backend/mistral/TutorDigitalMistra/front/instructor.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="instructor.css">
+    <link rel="icon" href="data:,">
 </head>
 
 <body>
@@ -148,6 +149,13 @@
                                     class="bi bi-x"></i></button>
                         </div>
                     </div>
+
+                    <div class="mt-3">
+                        <label class="form-label fw-bold small text-muted">Título del Libro</label>
+                        <input type="text" class="form-control" id="uploadTitle"
+                            placeholder="Nombre para el temario (Opcional)">
+                    </div>
+
                     <div class="mt-4 text-end">
                         <button class="btn-secondary-glass me-2" onclick="closeUploadModal()">Cancelar</button>
                         <button type="submit" class="btn-premium" id="uploadBtn">Procesar
