--- a/Backend/mistral/TutorDigitalMistra/front/tutor.html
+++ b/Backend/mistral/TutorDigitalMistra/front/tutor.html
@@ -15,6 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="data:,">
 
     <script>
         // ---- Guard: solo Alumnos logueados pueden acceder ----
@@ -72,26 +73,11 @@
         </button>
 
         <div id="chat-widget" class="glass-card" style="display: none;">
-            <div class="chat-header">
-                <div class="d-flex gap-2 align-items-center">
-                    <div class="avatar">👓</div>
-                    <div>
-                        <div class="fw-bold text-dark">Crazy</div>
-                        <div style="font-size: 0.75rem; color: var(--text-light);">Siempre atento</div>
-                    </div>
-                </div>
-                <div class="d-flex gap-2 align-items-center">
-                    <div class="status-badge">
-                        <span id="statusDot" class="status-dot"></span>
-                        <span id="connectionStatus">Conectando</span>
-                    </div>
-                    <button class="btn btn-sm text-secondary" id="close-chat-btn"><i class="bi bi-x-lg"></i></button>
-                </div>
-            </div>
+
+            <!-- Header REMOVED user request -->
 
             <div class="chat-body" id="chatContainer">
                 <div class="message bot">
-                    <div class="avatar"><i class="bi bi-robot"></i></div>
                     <div class="message-content">
                         <p class="mb-0">¡Hola! Soy Pablo. ¿Hablamos?</p>
                     </div>
@@ -102,6 +88,10 @@
                 <form id="chatForm" class="d-flex gap-2 align-items-center">
                     <textarea class="input-pill" id="userInput" rows="1" placeholder="Escribe aquí..."></textarea>
                     <button type="submit" class="btn-send" id="sendBtn"><i class="bi bi-send-fill"></i></button>
+                    <!-- Close Button moved to footer -->
+                    <button type="button" class="btn-close-chat-footer" id="close-chat-btn">
+                        <i class="bi bi-x-lg"></i>
+                    </button>
                 </form>
             </div>
         </div>
