--- a/Backend/mistral/TutorDigitalMistra/front/tutor.html
+++ b/Backend/mistral/TutorDigitalMistra/front/tutor.html
@@ -36,7 +36,7 @@
         </button>
         <div class="user-profile-dropdown" id="userProfileDropdown">
             <div class="user-profile-info">
-                <div class="profile-avatar-sm"><i class="bi bi-person-fill"></i></div>
+                <div class="profile-avatar-sm" id="profileAvatarSm"><i class="bi bi-person-fill"></i></div>
                 <div class="profile-details">
                     <span class="profile-name" id="profileName">Usuario</span>
                     <span class="profile-role" id="profileRole">Alumno</span>
@@ -100,25 +100,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
-    <script>
-        // ---- User Profile Menu ----
-        function toggleUserMenu() {
-            document.getElementById('userProfileDropdown').classList.toggle('open');
-        }
-        document.addEventListener('click', (e) => {
-            const wrapper = document.getElementById('userProfileWrapper');
-            if (wrapper && !wrapper.contains(e.target)) {
-                document.getElementById('userProfileDropdown').classList.remove('open');
-            }
-        });
-        function logoutUser() {
-            sessionStorage.removeItem('userRole');
-            window.location.href = 'login.html';
-        }
-        // Mostrar rol
-        const role = sessionStorage.getItem('userRole') || 'Alumno';
-        document.getElementById('profileRole').textContent = role;
-    </script>
+    <!-- Scripts UI movidos a script.js -->
 
     <script src="script.js"></script>
 </body>
