--- a/Backend/mistral/TutorDigitalMistra/front/instructor.html
+++ b/Backend/mistral/TutorDigitalMistra/front/instructor.html
@@ -126,6 +126,25 @@
                         <i class="bi bi-cloud-arrow-up"></i> Nueva Subida
                     </button>
                 </div>
+
+                <!-- Edit Panel (Hidden by default) -->
+                <div id="edit-book-panel" class="glass-card mb-4" style="display: none;">
+                    <div class="card-title">
+                        <i class="bi bi-pencil-square"></i> Editar Libro
+                    </div>
+                    <div class="card-body-inner">
+                        <div class="mb-3">
+                            <label class="label">Título del Libro</label>
+                            <input type="text" id="editBookTitle" class="input" placeholder="Nuevo título...">
+                            <input type="hidden" id="editBookId">
+                        </div>
+                        <div class="d-flex justify-content-end gap-2">
+                            <button class="btn-secondary-glass" onclick="cancelEditBook()">Cancelar</button>
+                            <button class="btn-premium" onclick="saveBookTitle()">Guardar Cambios</button>
+                        </div>
+                    </div>
+                </div>
+
                 <div id="uploads-list" class="row g-3">
                     <!-- Cards will go here -->
                 </div>
