--- a/Backend/mistral/TutorDigitalMistra/front/instructor.html
+++ b/Backend/mistral/TutorDigitalMistra/front/instructor.html
@@ -27,8 +27,41 @@
         <!-- Sidebar -->
         <aside class="sidebar-nav">
             <div class="sidebar-logo">
-                <span class="logo-emoji">👓</span>
-                <span>HoloMentor</span>
+                <div>
+                    <svg class="main-logo-svg" viewBox="0 0 1088.7649 852.07928" xmlns="http://www.w3.org/2000/svg">
+                        <g transform="translate(-285.32944,-133.48322)">
+                            <path class="logo-path-a"
+                                d="m 803.38981,592.25277 c 0,88.96465 5.93388,161.08474 -113.49152,161.08475 -119.4254,10e-6 -113.49153,-72.12009 -113.49153,-161.08475 0,-88.96466 50.81189,-161.08476 113.49153,-161.08475 62.67964,0 113.49152,72.1201 113.49152,161.08475 z" />
+                            <path class="logo-path-a"
+                                d="m 1170.3121,888.92622 c 0,39.03876 -3.9231,70.68594 -56.3284,70.68594 -52.4053,5e-5 -56.3285,-31.64714 -56.3285,-70.68594 0,-39.03878 28.8239,-70.68598 56.3285,-70.68597 27.5046,0 56.3284,31.6472 56.3284,70.68597 z" />
+                            <path class="logo-path-a"
+                                d="m 1345.3898,592.25277 c 0,88.96465 5.9339,161.08474 -113.4915,161.08475 -119.4254,10e-6 -113.4916,-72.12009 -113.4916,-161.08475 0,-88.96466 50.8119,-161.08476 113.4916,-161.08475 62.6796,0 113.4915,72.1201 113.4915,161.08475 z" />
+                            <path class="logo-path-b"
+                                d="m 867.00175,430.48341 c 0,135.62182 2.15606,203.59213 1.08831,269.64165 -1.06775,66.04952 171.67094,73.5806 199.33214,10.35492" />
+                            <path class="logo-path-b" d="M 504.67797,431.77819 V 752.72734" />
+                            <path class="logo-path-b" d="M 312.66514,431.77819 V 752.72734" />
+                            <path class="logo-path-b"
+                                d="m 492.07373,608.09068 c 0,0 -44.75169,20 -90.20932,20 -45.45763,0 -84.73984,-20 -84.73984,-20" />
+                            <path class="logo-path-c"
+                                d="m 651.70552,604.41071 a 39.262405,69.895706 0 0 1 -39.2624,69.8957 39.262405,69.895706 0 0 1 -39.26241,-69.8957 39.262405,69.895706 0 0 1 39.26241,-69.89571 39.262405,69.895706 0 0 1 39.2624,69.89571 z" />
+                            <path class="logo-path-c"
+                                d="m 1193.7055,604.41071 a 39.262405,69.895706 0 0 1 -39.2624,69.8957 39.262405,69.895706 0 0 1 -39.2624,-69.8957 39.262405,69.895706 0 0 1 39.2624,-69.89571 39.262405,69.895706 0 0 1 39.2624,69.89571 z" />
+                            <path class="logo-path-b"
+                                d="M 309.97944,960.42041 V 818.2067 c 0,0 22.25219,47.01191 58.43462,47.01191 36.18243,0 59.84268,-47.01191 59.84268,-47.01191 v 142.21371" />
+                            <path class="logo-path-b"
+                                d="m 606.3262,961.08271 h -116.5165 v -73.13682 -69.04944 h 116.94274" />
+                            <path class="logo-path-b" d="m 492.35532,888.58782 h 69.70014" />
+                            <path class="logo-path-b" d="m 858.94813,817.91032 h 143.98527" />
+                            <path class="logo-path-b" d="m 929.48911,818.81032 v 141.61118" />
+                            <path class="logo-path-b"
+                                d="M 659.90801,960.52529 V 817.59406 l 143.95047,142.51849 -0.55314,-142.51848" />
+                            <path class="logo-path-b"
+                                d="m 1236.9737,959.79562 v -140.7473 c 0,0 112.4706,-9.47942 112.4706,45.72571 0,55.20513 -111.5875,48.70063 -111.5875,48.70063 0,0 0.7139,8.66862 16.0159,3.07244 40.6913,-3.10704 94.1962,13.2032 95.0036,41.45971" />
+                            <path class="logo-path-b"
+                                d="m 734.48856,353.65754 c -66.62517,-47.39408 -36.14765,-139.07468 -16.61394,-152.9345 95.80061,79.35249 142.2543,97.90482 207.10193,126.50294 -22.16356,-74.94164 8.11761,-130.87267 28.59846,-169.09461 66.73349,76.59656 132.37189,154.03407 241.68719,197.93017" />
+                        </g>
+                    </svg>
+                </div>
             </div>
             <nav class="sidebar-menu">
                 <button class="nav-item active" onclick="switchTab('temario')">
